--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <script type="text/javascript">
                 OpenSeadragon({
                     id: "container1",
-                    tileSources: ["file:///tmp/photoaeriennes/1950.dzi"]
+                    tileSources: ["1950.dzi"]
                 })
             </script>
             
