--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <script type="text/javascript">
                 OpenSeadragon({
                     id: "container1",
-                    tileSources: ["1950.dzi"]
+                    prefixUrl: "/photosaeriennes/",
+                    tileSources: ["1950.dzi"],
+                    showNavigator: true
                 })
             </script>
             
