Moved a few things around

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="openseadragon.min.js"></script>
+        <script src="openseadragon/openseadragon.min.js"></script>
         <style>
             .openseadragon-container {
                 width: 100%;
@@ -13,8 +13,8 @@
             <script type="text/javascript">
                 OpenSeadragon({
                     id: "container1",
-                    prefixUrl: "/photosaeriennes/",
-                    tileSources: ["1950.dzi"],
+                    prefixUrl: "/photosaeriennes/openseadragon/",
+                    tileSources: ["/photosaeriennes/1950.dzi"],
                     showNavigator: true
                 })
             </script>
